# ZKNative

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml  deploy.yml
circuits/: README.md  compile.sh  voting_eligibility.circom
contracts/: foundry.toml
contracts/broadcast/: addresses.json
contracts/script/: Deploy.s.sol  Verify.s.sol
contracts/src/: GeneratedVerifier.sol  PrivateVoting.sol  VotingGovernor.sol  ZKNativeVerifier.sol
contracts/src/interfaces/: IPrivateVoting.sol  IZKVerifier.sol
contracts/test/: PrivateVoting.t.sol  ZKNativeVerifier.t.sol
contracts/test/helpers/: ProofHelper.sol
docs/: architecture.md  demo-script.md  deployment.md  pvm-ffi-guide.md  roadmap.md  voiceover-script.md
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
frontend/public/circuits/: verification_key.json  voting_eligibility.wasm  voting_eligibility_final.zkey
frontend/scripts/: ensure-assets.mjs
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: app-providers.tsx  private-voting-console.tsx  proposal-dashboard.tsx  use-case-card.tsx  use-case-demo.tsx  use-case-studio.tsx  wallet-status.tsx
frontend/src/lib/: clients.ts  constants.ts  contracts.ts  polkadot.ts  private-voting.ts  (+4 more)
pvm-verifier/: Cargo.toml
pvm-verifier/src/: ffi.rs  lib.rs  types.rs  verifier.rs
pvm-verifier/tests/: verifier_test.rs
scripts/: benchmark.ts  compile-circuits.sh  export-vk-bin.js  generate-proof.ts  setup.sh  sync-frontend-assets.mjs
(+9 files in other folders)
